@@ -1,8 +1,8 @@
 lib_LTLIBRARIES = libvoikko.la
 libvoikko_la_SOURCES = voikko_suggest.c voikko_utils.c voikko_setup.c voikko_spell.c \
                        voikko_hyphenate.c voikko_charset.c porting.c \
-                       voikko_tokenize.c
-libvoikko_la_LDFLAGS = -lmalaga -no-undefined -version-info 7:0:6 @LIBLDFLAGSWIN@
+                       voikko_tokenize.c sentence.c
+libvoikko_la_LDFLAGS = -lmalaga -no-undefined -version-info 8:0:7 @LIBLDFLAGSWIN@
 bin_PROGRAMS = voikkospell voikkohyphenate
 voikkospell_SOURCES = voikkospell.c porting.c
 voikkospell_CFLAGS = $(AM_CFLAGS)
