@@ -1,3 +1,8 @@
+2008-06-04 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Work on sentence splitting.
+	* Increase version numbers for version 1.8.
+
 2008-05-26 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>
 
 	* Provide libvoikko.pc for pkg-config.
